<resources>
    <string name="app_name">GithubUserApp</string>

    <string name="followers">Followers </string>
    <string name="following">Following </string>
    <string name="name">Name :</string>
    <string name="location">Location :</string>
    <string name="bio">Bio :</string>
    <string name="company">Company :</string>
    <string name="share">Share</string>
    <string name="smaple">sample</string>
</resources>